fix PurgeCommands